# BirchTree

./: .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  build_and_install.bat
R/: RcppExports.R
man/: BirchTree-package.Rd  buildTree.Rd
src/: Makevars  RcppExports.cpp  algo_build_tree.cpp  algo_build_tree.h  algo_calculations.cpp  algo_calculations.h  algo_distance.cpp  algo_distance.h  algo_outliers_removal.cpp  algo_outliers_removal.h  algo_rebuild_tree.cpp  algo_rebuild_tree.h  algo_rebuild_utils.cpp  algo_rebuild_utils.h  algo_utils.cpp  algo_utils.h  class_CF.cpp  class_CF.h  class_CFTree.cpp  class_CFTree.h  class_Entry.h  class_Node.cpp  class_Node.h  include_basic.h  include_global.h  rcpp_interface.cpp  utils_check_tree.cpp  utils_check_tree.h  utils_memory_consumption.cpp  utils_memory_consumption.h  utils_memory_consumption2.cpp  utils_nodes_counts.cpp  utils_nodes_counts.h  utils_return_matrix.cpp  utils_return_matrix.h  utils_vector.cpp  utils_vector.h
